--- a/trunk/bschords.cbp
+++ b/trunk/bschords.cbp
@@ -7,8 +7,8 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="debug_win">
-				<Option output="bin\debug\bschords" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\debug\" />
+				<Option output="bin/debug/bschords" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Option projectLinkerOptionsRelation="2" />
@@ -24,10 +24,10 @@
 					<Add option="-D__WXMSW__" />
 					<Add option="-DwxUSE_UNICODE" />
 					<Add option="-DHAVE_W32API_H" />
-					<Add directory="$(#wx)\lib\gcc_dll_unicode_debug\mswud" />
+					<Add directory="$(#wx)/lib/gcc_dll_unicode_debug/mswud" />
 				</Compiler>
 				<ResourceCompiler>
-					<Add directory="D:\wxwidgets\lib\gcc_lib\mswud" />
+					<Add directory="D:/wxwidgets/lib/gcc_lib/mswud" />
 				</ResourceCompiler>
 				<Linker>
 					<Add option="-mthreads" />
@@ -50,12 +50,12 @@
 					<Add library="libcomctl32.a" />
 					<Add library="libwsock32.a" />
 					<Add library="libodbc32.a" />
-					<Add directory="$(#wx)\lib\gcc_dll_unicode_debug" />
+					<Add directory="$(#wx)/lib/gcc_dll_unicode_debug" />
 				</Linker>
 			</Target>
 			<Target title="release_win">
-				<Option output="bin\release\bschords" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\release\" />
+				<Option output="bin/release/bschords" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/release/" />
 				<Option type="0" />
 				<Option compiler="gcc" />
 				<Option projectLinkerOptionsRelation="2" />
@@ -70,10 +70,10 @@
 					<Add option="-DHAVE_W32API_H" />
 					<Add option="-DNDEBUG" />
 					<Add option="-DNOPCH" />
-					<Add directory="$(#wx)\lib\gcc_lib\mswu" />
+					<Add directory="$(#wx)/lib/gcc_lib/mswu" />
 				</Compiler>
 				<ResourceCompiler>
-					<Add directory="D:\wxwidgets\lib\gcc_lib\mswu" />
+					<Add directory="D:/wxwidgets/lib/gcc_lib/mswu" />
 				</ResourceCompiler>
 				<Linker>
 					<Add option="-s" />
@@ -110,12 +110,12 @@
 					<Add library="advapi32" />
 					<Add library="wsock32" />
 					<Add library="odbc32" />
-					<Add directory="$(#wx)\lib\gcc_lib" />
+					<Add directory="$(#wx)/lib/gcc_lib" />
 				</Linker>
 			</Target>
 			<Target title="debug_linux">
-				<Option output="bin\debug\bschords" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\debug\" />
+				<Option output="bin/debug/bschords" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -129,8 +129,8 @@
 				</Linker>
 			</Target>
 			<Target title="release_linux">
-				<Option output="bin\release\bschords" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\release\" />
+				<Option output="bin/release/bschords" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/release/" />
 				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -141,8 +141,8 @@
 				</Linker>
 			</Target>
 			<Target title="cli_debug_linux">
-				<Option output="bin\debug\bschordscli" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\clidebug\" />
+				<Option output="bin/debug/bschordscli" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/clidebug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -155,8 +155,8 @@
 				</Linker>
 			</Target>
 			<Target title="cli_debug_win">
-				<Option output="bin\debug\bschordscli" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\clidebug\" />
+				<Option output="bin/debug/bschordscli" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/clidebug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -166,114 +166,114 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
-			<Add directory="D:\wxwidgets\include" />
-			<Add directory="D:\wxwidgets\contrib\include" />
+			<Add directory="D:/wxwidgets/include" />
+			<Add directory="D:/wxwidgets/contrib/include" />
 		</Compiler>
 		<ResourceCompiler>
-			<Add directory="D:\wxwidgets\include" />
+			<Add directory="D:/wxwidgets/include" />
 		</ResourceCompiler>
-		<Unit filename="src\app.cpp">
+		<Unit filename="src/app.cpp">
 			<Option target="debug_win" />
 			<Option target="release_win" />
 			<Option target="debug_linux" />
 			<Option target="release_linux" />
 		</Unit>
-		<Unit filename="src\app.h">
+		<Unit filename="src/app.h">
 			<Option target="debug_win" />
 			<Option target="release_win" />
 			<Option target="debug_linux" />
 			<Option target="release_linux" />
 		</Unit>
-		<Unit filename="src\bschordpro.cpp" />
-		<Unit filename="src\bschordpro.h" />
-		<Unit filename="src\bschords.rc">
+		<Unit filename="src/bschordpro.cpp" />
+		<Unit filename="src/bschordpro.h" />
+		<Unit filename="src/bschords.rc">
 			<Option compilerVar="WINDRES" />
 			<Option target="debug_win" />
 			<Option target="release_win" />
 			<Option target="debug_linux" />
 			<Option target="release_linux" />
 		</Unit>
-		<Unit filename="src\dcpainter.cpp">
+		<Unit filename="src/dcpainter.cpp">
 			<Option target="debug_win" />
 			<Option target="release_win" />
 			<Option target="debug_linux" />
 			<Option target="release_linux" />
 		</Unit>
-		<Unit filename="src\dcpainter.h">
+		<Unit filename="src/dcpainter.h">
 			<Option target="debug_win" />
 			<Option target="release_win" />
 			<Option target="debug_linux" />
 			<Option target="release_linux" />
 		</Unit>
-		<Unit filename="src\mainwnd.cpp">
+		<Unit filename="src/mainwnd.cpp">
 			<Option target="debug_win" />
 			<Option target="release_win" />
 			<Option target="debug_linux" />
 			<Option target="release_linux" />
 		</Unit>
-		<Unit filename="src\mainwnd.h">
+		<Unit filename="src/mainwnd.h">
 			<Option target="debug_win" />
 			<Option target="release_win" />
 			<Option target="debug_linux" />
 			<Option target="release_linux" />
 		</Unit>
-		<Unit filename="src\preferencesdlg.cpp">
+		<Unit filename="src/preferencesdlg.cpp">
 			<Option target="debug_win" />
 			<Option target="release_win" />
 			<Option target="debug_linux" />
 			<Option target="release_linux" />
 		</Unit>
-		<Unit filename="src\preferencesdlg.h">
+		<Unit filename="src/preferencesdlg.h">
 			<Option target="debug_win" />
 			<Option target="release_win" />
 			<Option target="debug_linux" />
 			<Option target="release_linux" />
 		</Unit>
-		<Unit filename="src\previewwnd.cpp">
+		<Unit filename="src/previewwnd.cpp">
 			<Option target="debug_win" />
 			<Option target="release_win" />
 			<Option target="debug_linux" />
 			<Option target="release_linux" />
 		</Unit>
-		<Unit filename="src\previewwnd.h">
+		<Unit filename="src/previewwnd.h">
 			<Option target="debug_win" />
 			<Option target="release_win" />
 			<Option target="debug_linux" />
 			<Option target="release_linux" />
 		</Unit>
-		<Unit filename="src\songbook.cpp" />
-		<Unit filename="src\songbook.h" />
-		<Unit filename="src\songbookwnd.cpp">
+		<Unit filename="src/songbook.cpp" />
+		<Unit filename="src/songbook.h" />
+		<Unit filename="src/songbookwnd.cpp">
 			<Option target="debug_win" />
 			<Option target="release_win" />
 			<Option target="debug_linux" />
 			<Option target="release_linux" />
 		</Unit>
-		<Unit filename="src\songbookwnd.h">
+		<Unit filename="src/songbookwnd.h">
 			<Option target="debug_win" />
 			<Option target="release_win" />
 			<Option target="debug_linux" />
 			<Option target="release_linux" />
 		</Unit>
-		<Unit filename="src\songstylesheet.cpp">
+		<Unit filename="src/songstylesheet.cpp">
 			<Option target="debug_win" />
 			<Option target="release_win" />
 			<Option target="debug_linux" />
 			<Option target="release_linux" />
 		</Unit>
-		<Unit filename="src\songstylesheet.h">
+		<Unit filename="src/songstylesheet.h">
 			<Option target="debug_win" />
 			<Option target="release_win" />
 			<Option target="debug_linux" />
 			<Option target="release_linux" />
 		</Unit>
-		<Unit filename="src\songstylesheetdlg.cpp">
+		<Unit filename="src/songstylesheetdlg.cpp">
 			<Option target="debug_win" />
 			<Option target="release_win" />
 			<Option target="debug_linux" />
 			<Option target="release_linux" />
 		</Unit>
-		<Unit filename="src\songstylesheetdlg.h">
+		<Unit filename="src/songstylesheetdlg.h">
 			<Option target="debug_win" />
 			<Option target="release_win" />
 			<Option target="debug_linux" />
@@ -284,11 +284,20 @@
 			<debugger />
 			<wxsmith version="1">
 				<resources>
-					<wxDialog wxs="wxsmith/x.wxs" src="x.cpp" hdr="x.h" name="x" language="CPP" />
-					<wxDialog wxs="wxsmith/NewDialog.wxs" src="NewDialog.cpp" hdr="NewDialog.h" name="NewDialog" language="CPP" />
+					<wxDialog wxs="wxsmith/x.wxs" src="x.cpp" hdr="x.h" fwddecl="0" i18n="1" name="x" language="CPP" />
+					<wxDialog wxs="wxsmith/NewDialog.wxs" src="NewDialog.cpp" hdr="NewDialog.h" fwddecl="0" i18n="1" name="NewDialog" language="CPP" />
 				</resources>
 			</wxsmith>
 			<envvars />
+			<DoxyBlocks>
+				<comment_style block="0" line="0" />
+				<doxyfile_project />
+				<doxyfile_build />
+				<doxyfile_warnings />
+				<doxyfile_output />
+				<doxyfile_dot />
+				<general />
+			</DoxyBlocks>
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
