--- a/bschords.cbp
+++ b/bschords.cbp
@@ -22,40 +22,47 @@
 					<Add option="-g" />
 					<Add option="-pipe" />
 					<Add option="-mthreads" />
-					<Add option='[[if (PLATFORM == PLATFORM_MSW &amp;&amp; (GetCompilerFactory().GetCompilerVersionString(_T(&quot;gcc&quot;)) &gt;= _T(&quot;4.0.0&quot;))) print(_T(&quot;-Wno-attributes&quot;));]]' />
-					<Add option="-D__WXDEBUG__" />
-					<Add option="-DWXUSINGDLL" />
-					<Add option="-D__GNUWIN32__" />
 					<Add option="-D__WXMSW__" />
-					<Add option="-DwxUSE_UNICODE" />
+					<Add option="-D_UNICODE" />
 					<Add option="-DHAVE_W32API_H" />
-					<Add directory="$(#wx)/lib/gcc_dll_unicode_debug/mswud" />
+					<Add option="-DNOPCH" />
+					<Add directory="$(#wx)/lib/gcc_dll/mswud" />
 				</Compiler>
 				<ResourceCompiler>
-					<Add directory="D:/wxwidgets/lib/gcc_lib/mswud" />
+					<Add directory="$(#wx)/lib/gcc_dll/mswud" />
 				</ResourceCompiler>
 				<Linker>
 					<Add option="-mthreads" />
-					<Add library="libwxmsw28ud.a" />
-					<Add library="libwxpngd.a" />
-					<Add library="libwxjpegd.a" />
-					<Add library="libwxtiffd.a" />
-					<Add library="libwxzlibd.a" />
-					<Add library="libwxmsw28ud_stc" />
-					<Add library="libkernel32.a" />
-					<Add library="libuser32.a" />
-					<Add library="libgdi32.a" />
-					<Add library="libwinspool.a" />
-					<Add library="libcomdlg32.a" />
-					<Add library="libadvapi32.a" />
-					<Add library="libshell32.a" />
-					<Add library="libole32.a" />
-					<Add library="liboleaut32.a" />
-					<Add library="libuuid.a" />
-					<Add library="libcomctl32.a" />
-					<Add library="libwsock32.a" />
-					<Add library="libodbc32.a" />
-					<Add directory="$(#wx)/lib/gcc_dll_unicode_debug" />
+					<Add library="libwxmsw30ud_aui" />
+					<Add library="libwxmsw30ud_stc" />
+					<Add library="libwxmsw30ud_adv" />
+					<Add library="libwxmsw30ud_richtext" />
+					<Add library="libwxmsw30ud_xrc" />
+					<Add library="libwxbase30ud_xml" />
+					<Add library="libwxmsw30ud_core" />
+					<Add library="libwxbase30ud" />
+					<Add library="libwxexpatd" />
+					<Add library="libwxscintillad" />
+					<Add library="libwxpngd" />
+					<Add library="libwxzlibd" />
+					<Add library="libwxjpegd" />
+					<Add library="libwxtiffd" />
+					<Add library="kernel32" />
+					<Add library="user32" />
+					<Add library="gdi32" />
+					<Add library="comdlg32" />
+					<Add library="winspool" />
+					<Add library="winmm" />
+					<Add library="shell32" />
+					<Add library="comctl32" />
+					<Add library="ole32" />
+					<Add library="oleaut32" />
+					<Add library="uuid" />
+					<Add library="rpcrt4" />
+					<Add library="advapi32" />
+					<Add library="wsock32" />
+					<Add library="odbc32" />
+					<Add directory="$(#wx)/lib/gcc_dll" />
 				</Linker>
 			</Target>
 			<Target title="release_win">
@@ -68,38 +75,35 @@
 					<Add option="-O2" />
 					<Add option="-pipe" />
 					<Add option="-mthreads" />
-					<Add option='[[if (PLATFORM == PLATFORM_MSW &amp;&amp; (GetCompilerFactory().GetCompilerVersionString(_T(&quot;gcc&quot;)) &gt;= _T(&quot;4.0.0&quot;))) print(_T(&quot;-Wno-attributes&quot;));]]' />
-					<Add option="-D__GNUWIN32__" />
 					<Add option="-D__WXMSW__" />
-					<Add option="-DwxUSE_UNICODE" />
+					<Add option="-D_UNICODE" />
 					<Add option="-DHAVE_W32API_H" />
 					<Add option="-DNDEBUG" />
 					<Add option="-DNOPCH" />
 					<Add directory="$(#wx)/lib/gcc_lib/mswu" />
 				</Compiler>
 				<ResourceCompiler>
-					<Add directory="D:/wxwidgets/lib/gcc_lib/mswu" />
+					<Add directory="$(#wx)/lib/gcc_lib/mswud" />
 				</ResourceCompiler>
 				<Linker>
 					<Add option="-s" />
 					<Add option="-mthreads" />
 					<Add option="-Wl,--subsystem,windows -mwindows" />
 					<Add option="-static-libgcc" />
-					<Add library="libwxbase28u.a" />
-					<Add library="libwxmsw28u_stc.a" />
-					<Add library="libwxmsw28u_aui.a" />
-					<Add library="libwxmsw28u_richtext.a" />
-					<Add library="libwxbase28u_xml.a" />
-					<Add library="libwxmsw28u_adv" />
-					<Add library="libwxmsw28u_html" />
-					<Add library="libwxmsw28u_core" />
-					<Add library="wxbase28u" />
-					<Add library="wxtiff" />
-					<Add library="wxjpeg" />
-					<Add library="wxpng" />
-					<Add library="wxzlib" />
-					<Add library="wxregexu" />
-					<Add library="wxexpat" />
+					<Add library="libwxmsw30u_aui" />
+					<Add library="libwxmsw30u_stc" />
+					<Add library="libwxmsw30u_adv" />
+					<Add library="libwxmsw30u_richtext" />
+					<Add library="libwxmsw30u_xrc" />
+					<Add library="libwxbase30u_xml" />
+					<Add library="libwxmsw30u_core" />
+					<Add library="libwxbase30u" />
+					<Add library="libwxexpat" />
+					<Add library="libwxscintilla" />
+					<Add library="libwxpng" />
+					<Add library="libwxzlib" />
+					<Add library="libwxjpeg" />
+					<Add library="libwxtiff" />
 					<Add library="kernel32" />
 					<Add library="user32" />
 					<Add library="gdi32" />
@@ -173,11 +177,11 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
-			<Add directory="D:/wxwidgets/include" />
-			<Add directory="D:/wxwidgets/contrib/include" />
+			<Add directory="$(#wx)/include" />
+			<Add directory="$(#wx)/contrib/include" />
 		</Compiler>
 		<ResourceCompiler>
-			<Add directory="D:/wxwidgets/include" />
+			<Add directory="$(#wx)/include" />
 		</ResourceCompiler>
 		<Unit filename="src/app.cpp">
 			<Option target="debug_win" />
@@ -326,12 +330,6 @@
 		<Extensions>
 			<code_completion />
 			<debugger />
-			<wxsmith version="1">
-				<resources>
-					<wxDialog wxs="wxsmith/x.wxs" src="x.cpp" hdr="x.h" fwddecl="0" i18n="1" name="x" language="CPP" />
-					<wxDialog wxs="wxsmith/NewDialog.wxs" src="NewDialog.cpp" hdr="NewDialog.h" fwddecl="0" i18n="1" name="NewDialog" language="CPP" />
-				</resources>
-			</wxsmith>
 			<envvars />
 			<DoxyBlocks>
 				<comment_style block="0" line="0" />
